--- a/index.html
+++ b/index.html
@@ -503,15 +503,21 @@
                          action="https://formspree.io/f/xeqdoedo"
                          method="POST" 
                          >
-                        <ul>
+                        <div>
+                            <div>
                             <label for="name" hidden>Fill in your name:</label>
-                            <li><input class="card2 form-field" id="name" required placeholder="Alex Usifo" maxlength="30" type="text" name="name" ></li>
+                            <input class="card2 form-field" id="name" required placeholder="Alex Usifo" maxlength="30" type="text" name="name" >
+                            </div>
+                            <div>
                             <label for="email" hidden>Fill in your email:</label>
-                            <li><input class="card2 form-field" id="email" required placeholder="ololadeshot@gmail.com" type="email" name="email" ></li>
+                            <input class="card2 form-field" id="email" required placeholder="ololadeshot@gmail.com" type="email" name="email" >
+                            </div>
+                            <div>
                             <label for="message" hidden>Fill in your message:</label>
-                            <li><textarea class="card3" id="message" required maxlength="500" placeholder="write your message here..." name="message"></textarea></li>
-                            <li><button class="last form-field" type="submit">Get In Touch</button></li>
-                        </ul>
+                            <textarea class="card3" id="message" required maxlength="500" placeholder="write your message here..." name="message"></textarea>
+                            </div>
+                            <button class="last form-field" type="submit">Get In Touch</button>
+                        </div>
                         </form>
                     </div>
         </section>
@@ -528,15 +534,21 @@
                  action="https://formspree.io/f/xeqdoedo"
                  method="POST" 
                  >
-                <ul>
-                    <label for="name" hidden>Fill in your name:</label>
-                    <li><input class="card2" id="name" required placeholder="Alex Usifo" maxlength="30" type="text" name="name" ></li>
-                    <label for="email" hidden>Fill in your email:</label>
-                    <li><input class="card2" id="email" required placeholder="ololadeshot@gmail.com" type="email" name="email" ></li>
-                    <label for="message" hidden>Fill in your name:</label>
-                    <li><textarea id="msg" class="card3" id="message" required maxlength="500" placeholder="write your message here..." name="message"></textarea></li>
-                    <li><button class="last" type="submit">Get In Touch</button></li>
-                </ul>
+                <div>
+                    <div>
+                    <label for="name2" hidden>Fill in your name:</label>
+                    <input class="card2" id="name2" required placeholder="Alex Usifo" maxlength="30" type="text" name="name" >
+                    </div>
+                    <div>
+                    <label for="email2" hidden>Fill in your email:</label>
+                    <input class="card2" id="email2" required placeholder="ololadeshot@gmail.com" type="email" name="email" >
+                    </div>
+                    <div>
+                    <label for="message2" hidden>Fill in your message:</label>
+                    <textarea id="msg" class="card3" id="message2" required maxlength="500" placeholder="write your message here..." name="message"></textarea>
+                    </div>
+                    <button class="last" type="submit">Get In Touch</button>
+                </div>
               <div class="last-btn">
                 <div class="btn-parent">
                     <button class="desktop-btn" type="submit">Get in Touch</button>
