--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
                     </div>
                     <div>
                     <label for="message2" hidden>Fill in your message:</label>
-                    <textarea id="msg" class="card3" id="message2" required maxlength="500" placeholder="write your message here..." name="message"></textarea>
+                    <textarea id="message2" class="card3" id="message2" required maxlength="500" placeholder="write your message here..." name="message"></textarea>
                     </div>
                     <button class="last" type="submit">Get In Touch</button>
                 </div>
