added close icon from figma

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="hamburger" onclick="toggleMenu();">
             </div>
             <ul class="navigate">
-                <li><a href="#" onclick="toggleMenu();">Portfolio</a></li>
+                <li><a href="#projects" onclick="toggleMenu();">Portfolio</a></li>
                 <li><a href="#about" onclick="toggleMenu();">About</a></li>
                 <li><a href="#" onclick="toggleMenu();">Contact</a></li>
             </ul>
@@ -59,7 +59,7 @@
         </ul>
     </section>
 </div>
-    <main class="grid">
+    <main class="grid" id="projects">
     <section class="card">
         <div class="card-child">
         <div class="card-child-img">        
@@ -500,7 +500,7 @@
 </div>
 
       
-        <section class="bgCard">
+        <section class="bgCard" id="contact">
                     <div class="center">
                         <h3 class="contactTitle">Contact me</h3>
                         <p class="contactText">if you have an application you are interested in developing,
