Change function in js file

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <div class="parent">  
         <header class="header">
             <a href="#" class="headerBrand">My Logo</a>
-            <div class="hamburger" onclick="toggleMenu();">
+            <div class="hamburger" id="clicktoggle">
             </div>
             <ul class="navigate">
-                <li><a href="#projects" onclick="toggleMenu();">Portfolio</a></li>
-                <li><a href="#about" onclick="toggleMenu();">About</a></li>
-                <li><a href="#" onclick="toggleMenu();">Contact</a></li>
+                <li id="toggle"><a href="#projects"  >Portfolio</a></li>
+                <li id="toggle2"><a href="#about" >About</a></li>
+                <li id="toggle3"><a href="#contact" >Contact</a></li>
             </ul>
         </header>
 
