--- a/index.html
+++ b/index.html
@@ -9,15 +9,17 @@
     <title> completePortfolio</title>
 </head>
 <body>
-    <div class="parent">  
+    <div class="parent">
         <header class="header">
             <a href="#" class="headerBrand">My Logo</a>
             <div class="hamburger" id="clicktoggle">
             </div>
             <ul class="navigate">
+                <div class="navigate_li">
                 <li id="toggle"><a href="#projects"  >Portfolio</a></li>
                 <li id="toggle2"><a href="#about" >About</a></li>
                 <li id="toggle3"><a href="#contact" >Contact</a></li>
+            </div>
             </ul>
         </header>
 
