refactored js to use arrow function

--- a/index.html
+++ b/index.html
@@ -550,13 +550,12 @@
                 <form
                  method="POST" 
                  id="form-id"
-                 onsubmit="submitForm(event)"
                  >
                 <ul>
                     <li><input class="card2" required placeholder="Alex Usifo" maxlength="30" type="text" name="name" ></li>
                     <li><input id="desktop-email" class="card2" required placeholder="ololadeshot@gmail.com" type="email" name="email"></li>
                     <li><textarea id="msg" class="card3" required maxlength="500" placeholder="write your message here..." name="message"></textarea></li>
-                    <li><button class="last" type="submit" value="submit" >Get In Touch</button></li>
+                    <li><button id="desktop-submit-btn" class="last" type="submit" value="submit" >Get In Touch</button></li>
                     <p id="message"></p>
                 </ul>
               <div class="last-btn">
