update modal.js and index.html

--- a/index.html
+++ b/index.html
@@ -37,12 +37,6 @@
             <div id="modal">
                 <p id="greeting">Here i am!</p>
                 <p id="say"></p>
-                <p id="hey"></p>
-                <p id="hi"></p>
-                <p id="sayy"></p>
-                <p id="sayyy"></p>
-
-
                 <div id="close-btn">&times;</div>
             </div>
         </div>
@@ -524,16 +518,13 @@
                          a feature that you need built or a project that needs coding.i'd love to help with it
                         </p>
                         <form
-                        method="POST" 
-                        id="mobile_id"
-                        onsubmit="mobileSubmitForm(event)"
+                        method="POST"
                          >
                         <ul>
                             <li><input class="card2 form-field" required placeholder="Alex Usifo" maxlength="30" type="text" name="name" ></li>
                             <li><input id="mobile_email" class="card2 form-field" required placeholder="ololadeshot@gmail.com" type="email" name="email" ></li>
                             <li><textarea class="card3" required maxlength="500" placeholder="write your message here..." name="message"></textarea></li>
                             <li><button class="last form-field" type="submit">Get In Touch</button></li>
-                            <p id="mobile_message"></p>
                         </ul>
                         </form>
                     </div>
@@ -549,13 +540,12 @@
                     <div class="contact-form-details">
                 <form
                  method="POST" 
-                 id="form-id"
                  >
                 <ul>
                     <li><input class="card2" required placeholder="Alex Usifo" maxlength="30" type="text" name="name" ></li>
                     <li><input id="desktop-email" class="card2" required placeholder="ololadeshot@gmail.com" type="email" name="email"></li>
                     <li><textarea id="msg" class="card3" required maxlength="500" placeholder="write your message here..." name="message"></textarea></li>
-                    <li><button id="desktop-submit-btn" class="last" type="submit" value="submit" >Get In Touch</button></li>
+                    <li><button id="desktop-submit" class="last" type="submit" value="submit" >Get In Touch</button></li>
                     <p id="message"></p>
                 </ul>
               <div class="last-btn">
