error message styled properly

--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
                             <li><input id="mobile_email" class="card2 form-field" required placeholder="ololadeshot@gmail.com" type="email" name="email" ></li>
                             <li><textarea class="card3" required maxlength="500" placeholder="write your message here..." name="message"></textarea></li>
                             <li><button class="last form-field" type="submit">Get In Touch</button></li>
-                            <p id="mobile_message"></p>
+                            <p id="mobile_message" class="mess"></p>
                         </ul>
                         </form>
                     </div>
@@ -555,7 +555,7 @@
                     <li><input id="desktop-email" class="card2" required placeholder="ololadeshot@gmail.com" type="email" name="email"></li>
                     <li><textarea id="msg" class="card3" required maxlength="500" placeholder="write your message here..." name="message"></textarea></li>
                     <li><button id="desktop-submit-btn" class="last" type="submit" value="submit" >Get In Touch</button></li>
-                    <p id="message"></p>
+                    <p id="message" class="mess"></p>
                 </ul>
               <div class="last-btn">
                 <div class="btn-parent">
