clean up in the project files

--- a/index.html
+++ b/index.html
@@ -32,21 +32,6 @@
                 <li><a href="#" >Contact</a></li>
             </ul>
         </header>
-
-        <div id="modal-container">
-            <div id="modal">
-                <p id="greeting">Here i am!</p>
-                <p id="say"></p>
-                <p id="hey"></p>
-                <p id="hi"></p>
-                <p id="sayy"></p>
-                <p id="sayyy"></p>
-
-
-                <div id="close-btn">&times;</div>
-            </div>
-        </div>
-        
     <div class="hero-bg"></div>
     <div class="hero">
     <section class="imgdiv">
@@ -117,7 +102,7 @@
         </ul>
         <div class="btn-parent">
             <a class="last"><p>See Project</p></a>
-            <a onclick="assignValue(1)" class="desktop-btn"><p>See Project</p></a>
+            <a class="desktop-btn"><p>See Project</p></a>
         </div>
         </div>
     </div>
@@ -162,8 +147,8 @@
             </li>
         </ul>
         <div class="btn-parent">
-            <a class="last" onclick="assignValue(1)"><p>See Project</p></a>
-            <a class="desktop-btn" onclick="assignValue(1)"><p>See Project</p></a>
+            <a class="last" ><p>See Project</p></a>
+            <a class="desktop-btn" ><p>See Project</p></a>
         </div>
     </div>
 </div>
@@ -210,8 +195,8 @@
                     </li>
                 </ul>
                 <div class="btn-parent">
-                    <a class="last" onclick="assignValue(2)"><p>See Project</p></a>
-                    <a onclick="assignValue(2)" class="desktop-btn"><p>See Project</p></a>
+                    <a class="last" ><p>See Project</p></a>
+                    <a  class="desktop-btn"><p>See Project</p></a>
                 </div>
             </div>
         <div class="card-child-img">        
@@ -265,8 +250,8 @@
         </li>
     </ul>
     <div class="btn-parent">
-        <a class="last" onclick="assignValue(3)"><p>See Project</p></a>
-        <a class="desktop-btn" onclick="assignValue(3)"><p>See Project</p></a>
+        <a class="last" ><p>See Project</p></a>
+        <a class="desktop-btn"><p>See Project</p></a>
     </div>
     </div>
 </div>
@@ -313,8 +298,8 @@
                     </li>
                 </ul>
                 <div class="btn-parent">
-                    <a class="last" onclick="assignValue(4)"><p>See Project</p></a>
-                    <a class="desktop-btn" onclick="assignValue(4)"><p>See Project</p></a>
+                    <a class="last" ><p>See Project</p></a>
+                    <a class="desktop-btn" ><p>See Project</p></a>
                 </div>
             </div>
         <div class="card-child-img">        
@@ -365,8 +350,8 @@
             </li>
         </ul>
         <div class="btn-parent">
-            <a class="last" onclick="assignValue(2)"><p>See Project</p></a>
-            <a class="desktop-btn" onclick="assignValue(2)"><p>See Project</p></a>
+            <a class="last" ><p>See Project</p></a>
+            <a class="desktop-btn"><p>See Project</p></a>
         </div>
         </div>  
         </div>
@@ -413,7 +398,7 @@
     </ul>
     <div class="btn-parent">
         <a class="last"><p>Get My Resume</p></a>
-        <a class="desktop-btn" onclick="assignValue(3)"><p>See Project</p></a>
+        <a class="desktop-btn" ><p>See Project</p></a>
     </div>
     </div>
     </div>
@@ -571,9 +556,5 @@
 </section>
     </section>
     </div>
-
-    <script src="modal.js"></script>
-    <script src="contact.js"></script>
-    <script src="header.js"></script>
 </body>
 </html>
