--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="modal.css">
     <script src="https://kit.fontawesome.com/c5af90d277.js" crossorigin="anonymous"></script>
     <title> completePortfolio</title>
 </head>
