--- a/index.html
+++ b/index.html
@@ -35,6 +35,53 @@
 
         <div id="modal-container">
             <div id="modal">
+                <p>ghgjzzddxcnhhdfg</p>
+                <div class="shows-mobile-card">
+                    <section  class="">
+                        <div class="card-modal-child">
+                            <div class="card-modal-child-img">        
+                            <img src="assets/Snapshoot2.png" class="bg-modal" alt="">
+                        </div>
+                        <div class="card-modal-child-content">
+                        <div class="title"><h1 class="headlineTitle">Tonic</h1>
+                        <ul class="items">
+                            <li class="theli">
+                                <a class="item1">CANOPY</a>
+                            </li>
+                            <li class="dot theli">
+                                
+                            </li>
+                            <li class="theli">
+                                <a class="item2">Front End Dev</a>
+                            </li>
+                            <li class="dot theli">
+                                
+                            </li>
+                            <li class="theli">
+                                <a class="item3">2022</a>
+                            </li>
+                        </ul>
+                        <p class="headlineText">A daily selection of privately personalised reads: no accounts or sign-ups required. </p>
+                    </div>
+                        <ul class="lang">
+                            <li>
+                               <div class="lang1"><a href="">html</a></div>
+                            </li>
+                            <li>
+                               <div class="lang1" ><a href="#">css</a></div>
+                            </li>
+                            <li>
+                                <div class="lang1"><a href="">javascript</a></div>
+                            </li>
+                        </ul>
+                        <div class="btn-parent">
+                            <a class="last" onclick="assignValue(2)"><p>See Project</p></a>
+                            <a class="desktop-btn" onclick="assignValue(2)"><p>See Project</p></a>
+                        </div>
+                        </div>  
+                        </div>
+                    </section>
+                </div>
                 <p id="greeting">Here i am!</p>
                 <p id="say"></p>
                 <p id="hey"></p>
