starting to convert functions to event listeners

--- a/index.html
+++ b/index.html
@@ -79,14 +79,14 @@
                             </li>
                         </ul>
                         <div class="flex-modal-button">
-                        <div class="btn-parent">
+                        <div class="mobile-btn-parent">
                             <!-- <a class="last" id="live-mobile"><p>See Live</p></a> -->
-                            <a href="" class="desktop-modal-btn" id="live"><p>See Live<span class="modalicon1"><img src="assets/Icons/modalicon1.png"  id=''alt="">
+                            <a href="" class="desktop-modal-btn" id="live"><p>See Live<span class="modalicon1"><img src="assets/Icons/modalicon1.png"  class='desktop-modal-btn-icon'alt="">
                             </span></p></a>
                         </div>
-                        <div class="btn-parent">
+                        <div class="mobile-btn-parent">
                             <!-- <a class="last" id="source-mobile"><p>See Source</p></a> -->
-                            <a href="" class="desktop-modal-btn" id="source"><p>See Source<span class="modalicon1"><img src="assets/Icons/modalicon2.png"  id=''alt="">
+                            <a href="" class="desktop-modal-btn" id="source"><p>See Source<span class="modalicon1"><img src="assets/Icons/modalicon2.png"  class='desktop-modal-btn-icon'alt="">
                             </span></p></a>
                         </div>
                         </div>
@@ -134,7 +134,7 @@
             <img src="assets/desktop-images/SnapshootPortfolio.png" class="bg-desktop" alt="">
         </div>
         <div class="card-child-content">
-        <div class="title"><h1 class="headlineTitle">Tonic</h1>
+        <div class="title"><h1 class="headlineTitle">Tonics</h1>
         <ul class="items">
             <li class="theli">
                 <a href="#" class="item1">CANOPY</a>
@@ -166,7 +166,7 @@
             </li>
         </ul>
         <div class="btn-parent">
-            <a class="last"><p>See Project</p></a>
+            <a onclick="assignValue(1)" class="last"><p>See Project</p></a>
             <a onclick="assignValue(1)" class="desktop-btn"><p>See Project</p></a>
         </div>
         </div>
@@ -463,7 +463,7 @@
         </li>
     </ul>
     <div class="btn-parent">
-        <a class="last"><p>Get My Resume</p></a>
+        <a onclick="assignValue(3)" class="last"><p>See Projects</p></a>
         <a class="desktop-btn" onclick="assignValue(3)"><p>See Project</p></a>
     </div>
     </div>
