--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@
             </li>
         </ul>
         <div class="btn-parent">
-            <a onclick="assignValue(1)" class="last"><p>See Project</p></a>
-            <a onclick="assignValue(1)" class="desktop-btn"><p>See Project</p></a>
+            <a class=" open-modal  last"><p>See Project</p></a>
+            <a id="first" class=" open-modal desktop-btn"><p>See Project</p></a>
         </div>
         </div>
     </div>
