modal content created dynamically

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <img src="assets/desktop-images/SnapshootPortfolio.png" class="bg-desktop" alt="">
         </div>
         <div class="card-child-content">
-        <div class="title"><h1 class="headlineTitle">Tonics</h1>
+        <div class="title"><h1 class="headlineTitle">Tonic</h1>
         <ul class="items">
             <li class="theli">
                 <a href="#" class="item1">CANOPY</a>
@@ -166,8 +166,8 @@
             </li>
         </ul>
         <div class="btn-parent">
-            <a class=" open-modal  last"><p>See Project</p></a>
-            <a id="first" class=" open-modal desktop-btn"><p>See Project</p></a>
+            <a class=" open-modal last"><p id="5">See Project</p></a>
+            <a class=" open-modal desktop-btn"><p id="1">See Project</p></a>
         </div>
         </div>
     </div>
@@ -212,8 +212,8 @@
             </li>
         </ul>
         <div class="btn-parent">
-            <a class="last" onclick="assignValue(1)"><p>See Project</p></a>
-            <a class="desktop-btn" onclick="assignValue(1)"><p>See Project</p></a>
+            <a  class="open-modal last"><p id="6">See Project</p></a>
+            <a  class="desktop-btn"><p>See Project</p></a>
         </div>
     </div>
 </div>
@@ -260,8 +260,8 @@
                     </li>
                 </ul>
                 <div class="btn-parent">
-                    <a class="last" onclick="assignValue(2)"><p>See Project</p></a>
-                    <a onclick="assignValue(2)" class="desktop-btn"><p>See Project</p></a>
+                    <a class="last"><p>See Project</p></a>
+                    <a class="open-modal desktop-btn"><p id="2">See Project</p></a>
                 </div>
             </div>
         <div class="card-child-img">        
@@ -316,8 +316,8 @@
         </li>
     </ul>
     <div class="btn-parent">
-        <a class="last" onclick="assignValue(3)"><p>See Project</p></a>
-        <a class="desktop-btn" onclick="assignValue(3)"><p>See Project</p></a>
+        <a class="last"><p>See Project</p></a>
+        <a class="open-modal desktop-btn"><p id="3">See Projectd</p></a>
     </div>
     </div>
 </div>
@@ -364,8 +364,8 @@
                     </li>
                 </ul>
                 <div class="btn-parent">
-                    <a class="last" onclick="assignValue(4)"><p>See Project</p></a>
-                    <a class="desktop-btn" onclick="assignValue(4)"><p>See Project</p></a>
+                    <a class="last"><p>See Project</p></a>
+                    <a class="open-modal desktop-btn"><p id="4">See Project</p></a>
                 </div>
             </div>
         <div class="card-child-img">        
@@ -416,8 +416,8 @@
             </li>
         </ul>
         <div class="btn-parent">
-            <a class="last" onclick="assignValue(2)"><p>See Project</p></a>
-            <a class="desktop-btn" onclick="assignValue(2)"><p>See Project</p></a>
+            <a class="open-modal last"><p id="7">See Project</p></a>
+            <a class="desktop-btn"><p>See Project</p></a>
         </div>
         </div>  
         </div>
@@ -463,8 +463,8 @@
         </li>
     </ul>
     <div class="btn-parent">
-        <a onclick="assignValue(3)" class="last"><p>See Projects</p></a>
-        <a class="desktop-btn" onclick="assignValue(3)"><p>See Project</p></a>
+        <a class="open-modal last"><p id="8">See Project</p></a>
+        <a class="desktop-btn"><p>See Project</p></a>
     </div>
     </div>
     </div>
